@@ -2879,7 +2879,7 @@ add_printer(cupsd_client_t  *con,	/* I - Client connection */
 
     char cache_name[1024];		/* Cache filename for printer attrs */
 
-    snprintf(cache_name, sizeof(cache_name), "%s/%s.ipp", CacheDir,
+    snprintf(cache_name, sizeof(cache_name), "%s/%s.ipp2", CacheDir,
              printer->name);
     unlink(cache_name);
 
@@ -6370,7 +6370,7 @@ delete_printer(cupsd_client_t  *con,	/* I - Client connection */
            printer->name);
   unlink(filename);
 
-  snprintf(filename, sizeof(filename), "%s/%s.ipp", CacheDir, printer->name);
+  snprintf(filename, sizeof(filename), "%s/%s.ipp2", CacheDir, printer->name);
   unlink(filename);
 
 #ifdef __APPLE__
